# clashi

./: Cargo.toml  README.md  showcase-group.tape  showcase-provider.tape  showcase.tape
src/: main.rs
src/backend/: data.rs  mod.rs
src/tab/: card.rs  card_page.rs  group_page.rs  mod.rs  provider_page.rs  proxy_page.rs  proxy_table.rs  vertical_gauge.rs
