[package]
name = "metatui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0-alpha.2" }
crossterm = "0.29.0"
chrono = "0.4.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27.1"
strum_macros = "0.27.1"

reqwest = { version = "0.12", features = ["json", "blocking"] }
# tokio = { version = "1", features = ["full"] }
